Corrected overflow problem

--- a/public/css/article.css
+++ b/public/css/article.css
@@ -108,7 +108,7 @@ h3 {
     margin-left: 29px !important;
     padding: 10px 0 2px 0;
     color: #003c4ed1 !important;
-    line-height: 0.3 !important;
+    line-height: 1.2 !important;
     font-style: normal;
     text-decoration: underline;
 }
